<resources>
    <string name="app_name">starboxDesign</string>
    <string name="todo">TODO</string>
    <string name="details">Details</string>
    <string name="caramel_n_frappuccino">Caramel \nFrappuccino</string>
    <string name="size_option">Size Option</string>
    <string name="_30_00">$ 30.00</string>
    <string name="best_sales">Best Sales</string>
    <string name="tall">Tall</string>
    <string name="_12_fl_oz">12 Fl Oz</string>
    <string name="_16_fl_oz">16 Fl Oz</string>
    <string name="grande">Grande</string>
    <string name="_24_fl_oz">24 Fl Oz</string>
    <string name="venti">Venti</string>
    <string name="custom">Custom</string>
    <string name="fl_oz">__ Fl Oz</string>
    <string name="_1">1</string>
    <string name="add_to_order">Add to Order</string>
</resources>