<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:layout_weight="10"
    android:background="@drawable/starboxcoffebackground">

    <Space
        android:id="@+id/s1"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintVertical_weight="0.4"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/first_constraint"/>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/first_constraint"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintVertical_weight="0.7"
            app:layout_constraintTop_toBottomOf="@+id/s1"
            app:layout_constraintBottom_toTopOf="@+id/img_star_box"
            android:padding="10dp">

            <ImageView
                android:id="@+id/back_image"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:src="@drawable/ic_back"
                android:scaleType="centerCrop"
                android:layout_marginStart="10dp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                android:contentDescription="@string/todo" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/details"
                android:textStyle="bold"
                android:textSize="17sp"
                android:textColor="@color/black"
                app:layout_constraintStart_toEndOf="@+id/back_image"
                app:layout_constraintEnd_toStartOf="@+id/img_basket"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"/>

            <ImageView
                android:id="@+id/img_basket"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:src="@drawable/backets"
                android:scaleType="centerCrop"
                android:layout_marginEnd="10dp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:contentDescription="@string/todo" />

            <com.google.android.material.card.MaterialCardView
                android:layout_width="10dp"
                android:layout_height="10dp"
                android:backgroundTint="@color/primary_theme_color"
                app:cardCornerRadius="20dp"
                android:layout_marginTop="5dp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintEnd_toEndOf="@+id/img_basket"
                />


        </androidx.constraintlayout.widget.ConstraintLayout>

    <ImageView
        android:id="@+id/img_star_box"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:src="@drawable/sss"
        android:scaleType="centerCrop"
        android:padding="10dp"
        app:layout_constraintVertical_weight="5"
        app:layout_constraintTop_toBottomOf="@+id/first_constraint"
        app:layout_constraintBottom_toTopOf="@+id/con_first_bottom"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:contentDescription="@string/todo"/>


        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/con_first_bottom"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintVertical_weight="1"
            app:layout_constraintTop_toBottomOf="@+id/img_star_box"
            app:layout_constraintBottom_toTopOf="@+id/con_third">
            
            <TextView
                android:id="@+id/txt_coffee_kind"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/caramel_n_frappuccino"
                android:textSize="20sp"
                android:textStyle="bold"
                android:textColor="@color/black"
                android:layout_marginStart="20dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"/>

            <TextView
                android:id="@+id/txt_size_option"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="#c1c0c7"
                android:textSize="10sp"
                android:layout_marginStart="20dp"
                android:layout_marginTop="10dp"
                android:text="@string/size_option"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/txt_coffee_kind" />

            <TextView
                android:id="@+id/txt_coffee_price"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/primary_theme_color"
                android:textSize="20sp"
                android:layout_marginBottom="10dp"
                android:layout_marginEnd="20dp"
                android:text="@string/_30_00"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@+id/txt_coffee_kind"
                app:layout_constraintBottom_toBottomOf="@+id/txt_coffee_kind"/>

            <TextView
                android:id="@+id/txt_best_sales"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="#c1c0c7"
                android:textSize="10sp"
                android:layout_marginEnd="18dp"
                android:text="@string/best_sales"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/txt_coffee_price"/>


        </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/con_third"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="20dp"
        app:layout_constraintVertical_weight="1.5"
        app:layout_constraintTop_toBottomOf="@+id/con_first_bottom"
        app:layout_constraintBottom_toTopOf="@+id/con_forth">

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/card_first"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:backgroundTint="#f0f8f2"
            app:cardCornerRadius="180dp"
            app:cardElevation="0dp"
            app:layout_constraintEnd_toStartOf="@+id/card_second"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" >
            <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:src="@drawable/small"
                android:padding="20dp"
                android:contentDescription="@string/todo" />
        </com.google.android.material.card.MaterialCardView>

        <TextView
            android:id="@+id/txt_tall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tall"
            android:textSize="15sp"
            android:textColor="@color/black"
            app:layout_constraintTop_toBottomOf="@+id/card_first"
            app:layout_constraintStart_toStartOf="@+id/card_first"
            app:layout_constraintEnd_toEndOf="@id/card_first"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_12_fl_oz"
            android:textSize="10sp"
            android:textColor="#c1c0c7"
            app:layout_constraintTop_toBottomOf="@+id/txt_tall"
            app:layout_constraintStart_toStartOf="@+id/txt_tall"
            app:layout_constraintEnd_toEndOf="@id/txt_tall"/>

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/card_second"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_marginStart="10dp"
            android:backgroundTint="#f0f8f2"
            app:cardCornerRadius="180dp"
            app:cardElevation="0dp"
            app:layout_constraintEnd_toStartOf="@+id/card_third"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/card_first"
            app:layout_constraintTop_toTopOf="parent" >

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:contentDescription="@string/todo"
                android:padding="15dp"
                android:src="@drawable/mid" />

        </com.google.android.material.card.MaterialCardView>

        <TextView
            android:id="@+id/txt_grand"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/grande"
            android:textSize="15sp"
            android:textColor="@color/black"
            app:layout_constraintTop_toBottomOf="@+id/card_second"
            app:layout_constraintStart_toStartOf="@+id/card_second"
            app:layout_constraintEnd_toEndOf="@id/card_second"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_16_fl_oz"
            android:textSize="10sp"
            android:textColor="#c1c0c7"
            app:layout_constraintTop_toBottomOf="@+id/txt_grand"
            app:layout_constraintStart_toStartOf="@+id/txt_grand"
            app:layout_constraintEnd_toEndOf="@id/txt_grand"/>

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/card_third"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_marginStart="10dp"
            android:backgroundTint="@color/primary_theme_color"
            app:cardCornerRadius="180dp"
            app:cardElevation="0dp"
            app:layout_constraintEnd_toStartOf="@+id/card_forth"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/card_second"
            app:layout_constraintTop_toTopOf="parent" >
            <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:src="@drawable/big"
                android:padding="11dp"
                android:contentDescription="@string/todo" />
        </com.google.android.material.card.MaterialCardView>

        <TextView
            android:id="@+id/txt_venti"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/venti"
            android:textSize="15sp"
            android:textColor="@color/black"
            app:layout_constraintTop_toBottomOf="@+id/card_third"
            app:layout_constraintStart_toStartOf="@+id/card_third"
            app:layout_constraintEnd_toEndOf="@id/card_third"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_24_fl_oz"
            android:textSize="10sp"
            android:textColor="#c1c0c7"
            app:layout_constraintTop_toBottomOf="@+id/txt_venti"
            app:layout_constraintStart_toStartOf="@+id/txt_venti"
            app:layout_constraintEnd_toEndOf="@id/txt_venti"/>

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/card_forth"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_marginStart="10dp"
            android:backgroundTint="#f0f8f2"
            app:cardCornerRadius="180dp"
            app:cardElevation="0dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/card_third"
            app:layout_constraintTop_toTopOf="parent" >
            <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:src="@drawable/mid"
                android:padding="15dp"
                android:contentDescription="@string/todo" />
        </com.google.android.material.card.MaterialCardView>

        <TextView
            android:id="@+id/txt_custom"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/custom"
            android:textSize="15sp"
            android:textColor="@color/black"
            app:layout_constraintTop_toBottomOf="@+id/card_forth"
            app:layout_constraintStart_toStartOf="@+id/card_forth"
            app:layout_constraintEnd_toEndOf="@id/card_forth"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/fl_oz"
            android:textSize="10sp"
            android:textColor="#c1c0c7"
            app:layout_constraintTop_toBottomOf="@+id/txt_custom"
            app:layout_constraintStart_toStartOf="@+id/txt_custom"
            app:layout_constraintEnd_toEndOf="@id/txt_custom"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/con_forth"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintVertical_weight="1.5"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/con_third">

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/card_min"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:backgroundTint="@color/primary_theme_color"
            app:cardCornerRadius="180dp"
            android:layout_marginStart="50dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent">
            <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:scaleType="center"
                android:src="@drawable/ic_rule"
                android:contentDescription="@string/todo" />
        </com.google.android.material.card.MaterialCardView>

        <TextView
            android:id="@+id/txt_counter_num"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_1"
            android:textColor="@color/black"
            android:textSize="25sp"
            android:layout_marginStart="10dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toEndOf="@+id/card_min"
            app:layout_constraintBottom_toBottomOf="parent"/>

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/card_plus"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:backgroundTint="@color/primary_theme_color"
            app:cardCornerRadius="180dp"
            android:layout_marginStart="10dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@+id/txt_counter_num">
            <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:scaleType="center"
                android:src="@drawable/ic_add"
                android:contentDescription="@string/todo" />
        </com.google.android.material.card.MaterialCardView>

        <com.google.android.material.button.MaterialButton
            android:layout_width="160dp"
            android:layout_height="65dp"
            android:backgroundTint="@color/primary_theme_color"
            app:cornerRadius="40dp"
            android:text="@string/add_to_order"
            android:textAllCaps="false"
            android:textSize="15sp"
            android:textColor="@color/white"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/card_plus"/>
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>